--- a/app/src/main/res/layout/activity_bajas.xml
+++ b/app/src/main/res/layout/activity_bajas.xml
@@ -7,15 +7,14 @@
     android:background="#304769">
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/num"
         android:layout_width="228dp"
         android:layout_height="46dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="109dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="108dp"
         android:background="#FFFFFF"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="159dp"
         android:layout_marginBottom="139dp"
+        android:onClick="eliminarRegistro"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
