Se actualizo la interfaz de modificaciones para refrescar

--- a/app/src/main/res/layout/activity_bajas.xml
+++ b/app/src/main/res/layout/activity_bajas.xml
@@ -7,7 +7,7 @@
     android:background="#304769">
 
     <EditText
-        android:id="@+id/num"
+        android:id="@+id/idor"
         android:layout_width="228dp"
         android:layout_height="46dp"
         android:layout_marginStart="72dp"
