--- a/app/src/main/res/layout/activity_consultas.xml
+++ b/app/src/main/res/layout/activity_consultas.xml
@@ -8,12 +8,13 @@
 
     <ListView
         android:id="@+id/listViewAlumnos"
-        android:layout_width="325dp"
-        android:layout_height="611dp"
+        android:layout_width="330dp"
+        android:layout_height="541dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:background="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@+id/caja_editable" />
 
     <TextView
         android:id="@+id/textView"
@@ -21,8 +22,24 @@
         android:layout_height="40dp"
         android:layout_marginStart="132dp"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/black"
+
         android:text="Consultas"
-        android:textSize="24sp"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/caja_editable"
+        android:layout_width="318dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/white"
+        android:backgroundTint="#FBFBFB"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
