--- a/app/src/main/res/layout/activity_usuarios.xml
+++ b/app/src/main/res/layout/activity_usuarios.xml
@@ -68,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="107dp"
         android:layout_marginEnd="164dp"
+        android:onClick="darAlta"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cajacontra" />
