--- a/app/src/main/res/layout/activity_usuarios.xml
+++ b/app/src/main/res/layout/activity_usuarios.xml
@@ -69,7 +69,7 @@
         android:layout_marginTop="107dp"
         android:layout_marginEnd="164dp"
         android:onClick="darAlta"
-        android:text="Button"
+        android:text="Agregar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cajacontra" />
 </androidx.constraintlayout.widget.ConstraintLayout>
